--- a/manifest.json
+++ b/manifest.json
@@ -21,7 +21,7 @@
     ],
     "theme_color": "#EEF0F4",
     "background_color": "#EEF0F4",
-    "start_url": "",
+    "start_url": "/Shopping-list-webapp--JS---FIREBASE-/",
     "display": "standalone",
     "orientation": "portrait"
 }
