--- a/manifest.json
+++ b/manifest.json
@@ -3,18 +3,18 @@
     "short_name": "LISTIFY",
     "icons": [
         {
-            "src": "./img/cart-192.png",
+            "src": "./img/cart.png",
             "sizes": "192x192",
             "type": "image/png",
             "purpose": "any maskable"
         },
         {
-            "src": "./img/cart-384.png",
+            "src": "./img/cart.png",
             "sizes": "384x384",
             "type": "image/png"  
         },
         {
-            "src": "./img/cart-512.png",
+            "src": "./img/cart.png",
             "sizes": "512x512",
             "type": "image/png"
         }
